DotBlue/tests/valid/PropertySpacing_2.php
<?php

class Foo
{

    private $a;


    private $b;


    /**
     * @var string
     */
    private $c;


    /**
     * @var string
     */
    private $d;



    public function __construct() { }

}