DotBlue/tests/invalid/PropertySpacing_2.php
<?php

class Foo
{

    private $a;


    private $b;

    /**
     * @var string
     */
    private $c;



    public function __construct() { }

}